Fixes to centering of footer, and arrow visibility on half screen navigation bar.

--- a/public/global.css
+++ b/public/global.css
@@ -4,6 +4,6 @@ body {
 
 a {
     color: #f50057;
-    font-weight: bold;
+    font-weight: 500;
     text-decoration: none;
 }
